--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    
+    <button id="SendAction">StartActivity</button>
+    <br>
+    <p1 id="meesage">Awaiting Message</p1>
 
     <script>
       // You can also require other files to run in this process
