--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -9,7 +9,7 @@
     
     <button id="SendAction">StartActivity</button>
     <br>
-    <p1 id="meesage">Awaiting Message</p1>
+    <p1 id="message">Awaiting message</p1>
 
     <script>
       // You can also require other files to run in this process
