--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -19,15 +19,16 @@
         <img src="aspect-ratio-gif-crop.gif" id="gif" height="200" width="200" alt="Animated Circles" style="border-radius: 35px; margin: 10px; opacity:1;">
         <!-- <img src="g2-crop.gif" id="gif" height="200" width="200" alt="Animated Circles" style="border-radius: 35px; margin: 10px; opacity:1;"> -->
       </div>
-      <p id="messageBox" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">Some Text!</p>
+      <br>
+      <p id="messageBox" class="messageBox" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">Some Text!</p><br>
         
-      <button type="button" id="SendAction" class = "button">Press & Speak! (Cmd+K)</button>
+      <button type="button" id="SendAction" class = "button">Click & Speak!</button>
     </div>
     
     <!-- Div for Intents-->
     <div class="intents_container" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">
       <h5 class="h5" id="h5" style="font-family: 'Raleway', sans-serif; color: white; font-size: 12px;">
-        Powered By<br><br>
+        <br><br><br><br>Powered By<br><br>
         <a href="https://azure.microsoft.com/en-us/" target="_blank">Microsoft Azure </a> | <a href="https://www.luis.ai/" target="_blank">Microsoft LUIS </a> | <a href="https://cloud.google.com/" target="_blank">Google Cloud </a> | <a href="https://www.rabbitmq.com/" target="_blank">RabbitMQ </a><br><br>
         Made at HackHarvard 2018 
       </h5>
