Animation changes, added audio and misc.

--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Blurp</title>
+  <title>IRIS</title>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="howler.core.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="animate.css">
@@ -13,13 +14,15 @@
 </head>
 
 <body style="align-content: center; text-align: center; -webkit-app-region: drag;" class="body">
-  <h1 id="blurp_des" class="blurp_des">BLURP</h1>
+  <h1 id="blurp_des" class="blurp_des">IRIS</h1>
   <p id="tagline" class="tagline" style="font-family: 'Raleway', sans-serif; color: white; font-style:italic; font-size: 12px;">Your
     Go to Voice to Code Assistant!</p>
   <!-- Div for GIF, Button and Status-->
   <div class="gif_container" style="padding-top: 15px">
+
     <div class="for_gif_pos">
       <img src="aspect-ratio-gif-crop.gif" id="gif" height="200" width="200" alt="Animated Circles" style="border-radius: 35px; margin: 10px; opacity:1;">
+      <!-- <script src="../../src/howler.core.js"></script> -->
       <!-- <img src="g2-crop.gif" id="gif" height="200" width="200" alt="Animated Circles" style="border-radius: 35px; margin: 10px; opacity:1;"> -->
     </div>
     <br>
