--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -34,7 +34,7 @@
   <!-- Div for Intents-->
   <div class="intents_container" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">
     <h5 class="h5" id="h5" style="font-family: 'Raleway', sans-serif; color: white; font-size: 12px;">
-      <br><br><br><br>Powered By<br><br>
+      <br>Powered By<br><br>
       <a href="https://azure.microsoft.com/en-us/" target="_blank">Microsoft Azure </a> | <a href="https://www.luis.ai/"
         target="_blank">Microsoft LUIS </a> | <a href="https://cloud.google.com/" target="_blank">Google Cloud </a> |
       <a href="https://www.rabbitmq.com/" target="_blank">RabbitMQ </a><br><br>
