Added button for free flow

--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -29,6 +29,7 @@
     <p id="messageBox" class="messageBox" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">Let's write some beautiful code together!</p><br>
 
     <button type="button" id="SendAction" class="button">Click & Speak!</button>
+    <button type="button" id="SendAction2" class="button">Free flow speech!</button>
   </div>
 
   <!-- Div for Intents-->
