Minor changes to UI/UX

--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -26,10 +26,11 @@
       <!-- <img src="g2-crop.gif" id="gif" height="200" width="200" alt="Animated Circles" style="border-radius: 35px; margin: 10px; opacity:1;"> -->
     </div>
     <br>
-    <p id="messageBox" class="messageBox" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">Let's write some beautiful code together!</p><br>
+    <p id="messageBox" class="messageBox" style="border: black; height:30px; color: white; font-family: 'Raleway', sans-serif; font-size: 0.8rem;">Let's <em><b>write</b></em> some beautiful <em><b>code</b></em> together!</p><br>
 
     <button type="button" id="SendAction" class="button">Click & Speak!</button>
-    <button type="button" id="SendAction2" class="button">Free flow speech!</button>
+    <br>
+    <button type="button" id="SendAction2" class="button">Free Flow Speech!</button>
   </div>
 
   <!-- Div for Intents-->
