--- a/electronApp/index.html
+++ b/electronApp/index.html
@@ -16,7 +16,7 @@
 <body style="align-content: center; text-align: center; -webkit-app-region: drag;" class="body">
   <h1 id="blurp_des" class="blurp_des">IRIS</h1>
   <p id="tagline" class="tagline" style="font-family: 'Raleway', sans-serif; color: white; font-style:italic; font-size: 12px;">Your
-    Go to Voice to Code Assistant!</p>
+    Go to Voice-to-Code Assistant!</p>
   <!-- Div for GIF, Button and Status-->
   <div class="gif_container" style="padding-top: 15px">
 
